--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -222,8 +222,8 @@ h6 {
 }
 
 ::-moz-selection {
-  background: #a4855e;
-  color: #fcf1c3
+  background: #73B590;
+  color: #292900
 }
 
 ::selection {
@@ -241,7 +241,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #a78457
+  background-color: #57a76b
 }
 
 ul {
@@ -263,11 +263,11 @@ a:hover {
 
 a {
   transition: .3s ease;
-  color: #a78457
+  color: #57a75b
 }
 
 a:hover {
-  color: #b99d78
+  color: #78b97d
 }
 
 a,
@@ -280,7 +280,7 @@ button {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  background-color: rgba(167, 132, 87, .1);
+  background-color: rgba(91, 167, 87, 0.1);
   pointer-events: none;
   z-index: 999999;
   transition: transform .35s cubic-bezier(.175, .885, .32, 1.275);
@@ -307,7 +307,7 @@ button {
 
 .scroll-progress .scroll-bar {
   width: inherit;
-  background-color: #a78457
+  background-color: #57a764
 }
 
 @media (max-width:991px) {
@@ -434,7 +434,7 @@ main .loader {
   pointer-events: none;
   height: 200px;
   width: 200px;
-  background-color: #a78457;
+  background-color: #a78f57;
   top: 20vh;
   left: 50%;
   transform: translateX(-50%);
@@ -647,7 +647,7 @@ main .loader {
 .form-control {
   padding: 0 0 5px 0;
   border: 0;
-  border-bottom: 1px solid #8e9193;
+  border-bottom: 1px solid #8e9390;
   border-radius: 0
 }
 
@@ -720,15 +720,15 @@ textarea.form-control {
 }
 
 .text-primary {
-  color: #a78457 !important
+  color: #417C4A !important
 }
 
 .bg-primary {
-  background-color: #a78457 !important
+  background-color: #5aa757 !important
 }
 
 a.text-primary:hover {
-  color: #b99d78 !important
+  color: #7eb978 !important
 }
 
 .btn-link,
@@ -740,7 +740,7 @@ a.text-primary:hover {
 a.btn-link-alt:hover,
 a.btn-link:hover,
 a.text-dark:hover {
-  color: #a78457 !important
+  color: #57a760 !important
 }
 
 .bg-dark {
@@ -783,8 +783,8 @@ footer::after {
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 4px;
-  -webkit-text-decoration-color: rgba(167, 132, 87, .8);
-  text-decoration-color: rgba(167, 132, 87, .8)
+  -webkit-text-decoration-color: rgba(87, 167, 87, 0.8);
+  text-decoration-color: rgba(87, 167, 88, 0.8)
 }
 
 .btn::before,
@@ -799,7 +799,7 @@ footer::after {
 
 .border,
 .btn::before {
-  border: 1px solid rgba(167, 132, 87, .5)
+  border: 1px solid rgba(95, 167, 87, 0.5)
 }
 
 .border-color {
@@ -913,7 +913,7 @@ footer::after {
   top: -1px;
   left: 0;
   transition: .3s cubic-bezier(.175, .885, .32, 1.275);
-  background: rgba(167, 132, 87, .15);
+  background: rgba(87, 167, 107, 0.15);
   transform: scale(.7);
   opacity: 0;
   z-index: -1;
@@ -1193,7 +1193,7 @@ footer::after {
 }
 
 .swiper-projects .swiper-project-controls .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
-  background: #a78457
+  background: #57a75b
 }
 
 .swiper-projects .swiper-project-controls .swiper-next,
@@ -1346,7 +1346,7 @@ footer .block::after {
   width: 100%;
   left: 0;
   top: 0;
-  background-color: rgba(25, 30, 35, .8);
+  background-color: rgba(25, 35, 28, 0.8);
   z-index: -1;
   border-top-left-radius: 22px;
   border-top-right-radius: 22px
