--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -247,11 +247,11 @@ body::-webkit-scrollbar-thumb {
   background-color: #57a76b;
 }
 
-ul {
+/* ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
+} */
 
 img {
   vertical-align: middle;
