--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -1361,3 +1361,81 @@ footer .block::after {
   border-top-left-radius: 22px;
   border-top-right-radius: 22px;
 }
+
+div#comparison {
+  width: 100%;
+  height: 100vw;
+  max-width: 600px;
+  max-height: 600px;
+  overflow: hidden;
+}
+div#comparison figure {
+  background-image: url("../images/projects/HomeUI.png");
+  background-size: cover;
+  position: relative;
+  font-size: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+div#comparison figure > img {
+  position: relative;
+  width: 100%;
+}
+div#comparison figure div {
+  background-image: url("../images/projects/HomeWireframe.png");
+  background-size: cover;
+  position: absolute;
+  width: 20%;
+  box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  height: 100%;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  position: relative;
+  top: -1rem;
+  background-color: rgb(176, 222, 192);
+  width: 100%;
+}
+input[type="range"]:focus {
+  outline: none;
+}
+input[type="range"]:active {
+  outline: none;
+}
+
+input[type="range"]::-moz-range-track {
+  -moz-appearance: none;
+  height: 15px;
+  width: 98%;
+  background-color: rgba(255, 255, 255, 0.1);
+  position: relative;
+  outline: none;
+}
+input[type="range"]::active {
+  border: none;
+  outline: none;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 20px;
+  height: 15px;
+  background: #fff;
+  border-radius: 0;
+}
+input[type="range"]::-moz-range-thumb {
+  -moz-appearance: none;
+  width: 20px;
+  height: 15px;
+  background: #fff;
+  border-radius: 0;
+}
+input[type="range"]:focus::-webkit-slider-thumb {
+  background: rgba(255, 255, 255, 0.5);
+}
+input[type="range"]:focus::-moz-range-thumb {
+  background: rgba(255, 255, 255, 0.5);
+}
